[package]
name = "type_sitter_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = "0.22.2"
tree-sitter-go = "0.21.0"
type-sitter-lib = { version = "0.4.0", features = ["yak-sitter"] }
yak-sitter = "0.4.0"

[[bin]]
name = "type_sitter_example"
path = "main.rs"
